tests/rosetta/out/Java/array-concatenation.java
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:30:52Z
// array-concatenation.mochi
import java.util.*;

public class ArrayConcatenation {
    static List<Integer> a = new ArrayList<>(Arrays.asList(1, 2, 3));
    static List<Integer> b = new ArrayList<>(Arrays.asList(7, 12, 60));
    static List<Integer> concatInts(List<Integer> a, List<Integer> b) {
        List<Integer> out = Arrays.asList();
        for (Integer v : a) {
            out.add(v);
        }
        for (Integer v : b) {
            out.add(v);
        }
        return out;
    }
    static List<any> concatAny(List<any> a, List<any> b) {
        List<any> out = Arrays.asList();
        for (any v : a) {
            out.add(v);
        }
        for (any v : b) {
            out.add(v);
        }
        return out;
    }
    static <T> List<T> append(List<T> list, T item) {
        List<T> res = new ArrayList<>(list);
        res.add(item);
        return res;
    }
    public static void main(String[] args) {
    System.out.println(String.valueOf(concatInts(a, b)));
    List<any> i = Arrays.asList(1, 2, 3);
    List<any> j = Arrays.asList("Crosby", "Stills", "Nash", "Young");
    System.out.println(String.valueOf(concatAny(i, j)));
    List<Integer> l = new ArrayList<>(Arrays.asList(1, 2, 3));
    List<Integer> m = new ArrayList<>(Arrays.asList(7, 12, 60));
    System.out.println(String.valueOf(concatInts(l, m)));
    }
}
